# Wifi

./: .replit  README.md  build.sh  connection.md  gradle.properties  gradlew  gradlew.bat  replit.md  settings.gradle
.agents/: agent_assets_metadata.toml
Wifi/: README.md
android-control-center/: FEATURE_PROMISE.md  HOW_TO_TEST.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android-control-center/app/src/main/cpp/: CMakeLists.txt
android-control-center/app/src/main/cpp/openssl/: hkdf.h  spake2.h
app/: build.gradle  proguard-rules.pro
attached_assets/: Pasted--2s-1s-0s-0s-18s-2s-0s-1s-45s-Run-DIR-wifi-qr-app-Welco_1780328678591.txt  Pasted--36s-Run-echo-Building-DEBUG-APK-Building-DEBUG-APK-Wel_1780295149168.txt  Pasted--53s-Run-PROJECT-Welcome-to-Gradle-8-4-Here-are-the-hig_1780330770545.txt  Pasted--ACCU-Signed-Re-1780330951374_1780330951375.txt  Pasted--ACCU-TLS-Connectio-1780303825770_1780303825773.txt  Pasted--Debug-APK-failed-12-minutes-ago-in-3m-20s-2s-6s-3s-14s_1780236117219.txt  Pasted--Run-PROJECT-Welcome-to-Gradle-8-4-Here-are-the-highlig_1780330449838.txt  Pasted--failed-2-minutes-ago-in-1m-36s-3s-2s-0s-0s-17s-0s-7s-1_1780348355608.txt  Pasted-1m-11s-Run-echo-Building-DEBUG-only-no-signed-APK-no-re_1780237053858.txt  Pasted-1m-19s-Run-PROJECT-Welcome-to-Gradle-9-5-1-Here-are-the_1780337930751.txt  Pasted-1m-27s-Run-echo-Building-DEBUG-APK-Building-DEBUG-APK-D_1780241028986.txt  Pasted-1s-Run-echo-ANDROID-SDK-ROOT-ANDROID-SDK-ROOT-echo-ANDR_1780241848557.txt  (+13 more)
docs/: ACCU_THIRD_PARTY_DEVELOPER_GUIDE.md
(+398 files in other folders)
